--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
         "sass-loader": "^7.1.0",
         "vue": "^2.6.11",
         "vue-router": "^3.1.6",
-        "vue-template-compiler": "^2.6.11"
+        "vue-template-compiler": "^2.6.11",
+        "vuex": "^3.3.0"
     },
     "dependencies": {
         "yargs-parser": "^13.1.2"
