--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
         "vuex": "^3.3.0"
     },
     "dependencies": {
+        "body-scroll-lock": "^3.0.2",
+        "vue-js-modal": "^2.0.0-rc.3",
         "vue-scrollto": "^2.18.1",
+        "vue2-perfect-scrollbar": "^1.5.0",
         "yargs-parser": "^13.1.2"
     }
 }
