--- a/.env.heroku
+++ b/.env.heroku
@@ -2,7 +2,7 @@ APP_NAME=feeling-notes
 APP_ENV=production
 APP_KEY=base64:k0iezjnVgs7zNaGxxmST+D9CsbaKyIurRytWeK2U3xU=
 APP_DEBUG=true
-APP_URL=https://feeling-notes.herokuapp.com/
+APP_URL=https://feeling-notes.herokuapp.com
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
