デザイン修正

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,3 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=ef98b3d6807ba66035f3"
+    "/js/app.js": "/js/app.js?id=5365fd29089d5771282c",
+    "/css/app.css": "/css/app.css?id=54fb8a41bf87f11965fd"
 }
