--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     },
     "dependencies": {
         "body-scroll-lock": "^3.0.2",
+        "moment": "^2.26.0",
         "vue-js-modal": "^2.0.0-rc.3",
         "vue-scrollto": "^2.18.1",
         "vue2-perfect-scrollbar": "^1.5.0",
