--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "moment": "^2.26.0",
         "vue-burger-menu": "^2.0.5",
         "vue-chartjs": "^3.5.0",
+        "vue-click-outside": "^1.1.0",
         "vue-js-modal": "^2.0.0-rc.3",
         "vue-scrollto": "^2.18.1",
         "vue2-perfect-scrollbar": "^1.5.0",
