--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -58,7 +58,7 @@ jobs:
       - run:
           name: deploy
           command: |
-            ssh -o StrictHostKeyChecking=no -t ec2-user@${HOST_NAME} "cd /var/www/feeling-notes && \
+            ssh -o StrictHostKeyChecking=no -t root@${HOST_NAME} "cd feeling-notes && \
               git pull origin master && \
               composer install -n --no-dev --prefer-dist && \
               npm ci && \
