--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -61,6 +61,7 @@ jobs:
             ssh -o StrictHostKeyChecking=no -t ec2-user@${HOST_NAME} "cd /var/www/feeling-notes && \
               git pull origin master && \
               composer install -n --no-dev --prefer-dist && \
+              npm run prod && \
               php artisan migrate --force && \
               php artisan config:cache"
 
