--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,8 +66,8 @@ jobs:
       - run:
           name: npm install
           command: |
-            npm install && \
-            npm run prod && \
+            npm install
+            npm run prod
 workflows:
   version: 2
   build_deploy:
