config.yml 修正 -run npm修正

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,8 +66,9 @@ jobs:
       - run:
           name: npm install
           command: |
-            npm install
-            npm run prod
+          ssh -o StrictHostKeyChecking=no -t ec2-user@${HOST_NAME} "cd /var/www/feeling-notes && \
+            npm install && \
+            npm run prod"
 workflows:
   version: 2
   build_deploy:
