config.yml 修正 -run npm 修正 sudo yumコマンドに変更

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -67,8 +67,8 @@ jobs:
           name: npm
           command: |
             ssh -o StrictHostKeyChecking=no -t ec2-user@${HOST_NAME} "cd /var/www/feeling-notes && \
-              yum update && \
-              yum install -y npm && \
+              sudo yum update && \
+              sudo yum install -y npm && \
               npm install && \
               npm run prod"
 workflows:
