--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -70,7 +70,7 @@ jobs:
           name: npm
           command: |
             ssh -o StrictHostKeyChecking=no -t ec2-user@${HOST_NAME} "cd /var/www/feeling-notes && \
-              sudo yum update && \
+              sudo yum -y update && \
               sudo yum install -y npm && \
               npm install && \
               npm run prod"
